@@ -12,6 +12,7 @@ Changes
 
 Fixed Bugs
 ----------
+  * 3517737 : Incorrect handling of agent switching, with selected weapon
   * Pathfinding out of memory/segfault error
   * Modifier keys where not passed to the key event
   * Next and previous button in the briefing where not updated correctly.
